--- a/src/main/resources/DnD/dnd-calculator.fxml
+++ b/src/main/resources/DnD/dnd-calculator.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="543.0" prefWidth="399.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DnDGuide.DNDCalculatorController">
+<AnchorPane prefHeight="543.0" prefWidth="399.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DnD.DNDCalculatorController">
    <children>
       <GridPane layoutY="231.0" prefHeight="60.0" prefWidth="400.0">
         <columnConstraints>
