--- a/src/main/java/DnD/CSS/SpellsPageWindowStylesheet.css
+++ b/src/main/java/DnD/CSS/SpellsPageWindowStylesheet.css
@@ -10,10 +10,16 @@
     -fx-stroke-width: 2px;
 }
 #anchorPaneSecondary{
-    -fx-background-color: #fbf3d0;
-    -fx-border-style: solid none solid none;
-    -fx-border-width: 3;
-    -fx-border-color: #F2A52C;
+    -fx-background-image: url('Backgrounds/backgroundPaper.jpg');
+    -fx-background-size: cover;
+    -fx-border-color: black;
+    -fx-border-width: 2px;
     -fx-background-radius: 1em;
     -fx-border-radius: 1em;
+}
+#spellDescription{
+    -fx-line-spacing: 8px;
+}
+#spellCasting{
+    -fx-line-spacing: 8px;
 }
