--- a/src/main/java/DnD/CSS/SpellsWindowStylesheet.css
+++ b/src/main/java/DnD/CSS/SpellsWindowStylesheet.css
@@ -1,14 +1,18 @@
 .combo-box{
     -fx-background-color: #e4d8c8;
     -fx-font-size: 16px;
+    -fx-border-radius: 0em;
 }
+
 .combo-box-popup .list-cell{
     -fx-background-color: #e4d8c8;
 }
+
 .combo-box-popup .list-cell:hover{
     -fx-background-color: #D4C9BA;
     -fx-text-fill: black;
 }
+
 .combo-box .scroll-bar{
     -fx-background-color: #D4C9BA;
 }
