--- a/src/main/resources/DnD/dnd-enemy-page.fxml
+++ b/src/main/resources/DnD/dnd-enemy-page.fxml
@@ -15,14 +15,14 @@
    <content>
       <AnchorPane fx:id="anchorPaneMain" prefHeight="900.0" prefWidth="700.0">
          <children>
-            <AnchorPane fx:id="anchorPaneSecondary" layoutX="14.0" layoutY="14.0" prefHeight="479.0" prefWidth="310.0">
+            <AnchorPane fx:id="anchorPaneSecondary" layoutX="14.0" layoutY="14.0" prefHeight="500.0" prefWidth="320.0">
                <children>
-                  <Label fx:id="enemyName" alignment="TOP_LEFT" layoutX="2.0" layoutY="3.0" prefHeight="90.0" prefWidth="311.0" styleClass="enemyName" text="Example name of the monster" wrapText="true">
+                  <Label fx:id="enemyName" alignment="TOP_LEFT" layoutX="10.0" layoutY="14.0" prefHeight="90.0" prefWidth="300.0" text="Example name of the monster" wrapText="true">
                      <font>
-                        <Font name="Lucida Sans Typewriter Regular" size="20.0" />
+                        <Font name="Lucida Sans Typewriter Regular" size="18.0" />
                      </font>
                   </Label>
-                  <Label fx:id="enemyDescription" alignment="TOP_LEFT" layoutX="1.0" layoutY="79.0" prefHeight="400.0" prefWidth="311.0" text="Example description" wrapText="true">
+                  <Label fx:id="enemyDescription" alignment="TOP_LEFT" layoutX="15.0" layoutY="115.0" prefHeight="370.0" prefWidth="290.0" text="Example description" wrapText="true">
                      <font>
                         <Font name="Lucida Sans Typewriter Regular" size="16.0" />
                      </font>
