--- a/src/main/resources/DnD/dnd-spells.fxml
+++ b/src/main/resources/DnD/dnd-spells.fxml
@@ -2,35 +2,37 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="910.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DnD.SpellWindowController">
+<AnchorPane prefHeight="700.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DnD.SpellWindowController">
    <children>
-      <ImageView fitHeight="705.0" fitWidth="910.0" pickOnBounds="true">
-         <image>
-            <Image url="@CSS/Backgrounds/backgroundPaper.jpg" />
-         </image>
-      </ImageView>
-      <TableView fx:id="spellTableView" fixedCellSize="30.0" layoutX="169.0" layoutY="138.0" onMouseClicked="#doubleMouseClicked" pickOnBounds="false" prefHeight="535.0" prefWidth="700.0">
+      <TableView fx:id="spellTableView" fixedCellSize="30.0" layoutX="185.0" layoutY="90.0" onMouseClicked="#doubleMouseClicked" pickOnBounds="false" prefHeight="575.0" prefWidth="740.0">
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <Pane prefHeight="705.0" prefWidth="130.0">
+      <Pane fx:id="pane" layoutX="14.0" layoutY="15.0" prefHeight="650.0" prefWidth="150.0">
          <children>
-            <Button id="1" layoutX="20.0" layoutY="55.0" mnemonicParsing="false" prefHeight="90.0" prefWidth="90.0" />
-            <Button layoutX="20.0" layoutY="180.0" mnemonicParsing="false" prefHeight="90.0" prefWidth="90.0" />
-            <Button layoutX="20.0" layoutY="305.0" mnemonicParsing="false" prefHeight="90.0" prefWidth="90.0" />
-            <Button layoutX="20.0" layoutY="430.0" mnemonicParsing="false" prefHeight="90.0" prefWidth="90.0" />
-            <Button layoutX="20.0" layoutY="555.0" mnemonicParsing="false" prefHeight="90.0" prefWidth="90.0" />
+            <Button id="1" layoutX="18.0" layoutY="110.0" mnemonicParsing="false" onMouseClicked="#MouseClicked" prefHeight="90.0" prefWidth="115.0" text="Creatures" />
+            <Button id="0" layoutX="18.0" layoutY="235.0" mnemonicParsing="false" onMouseClicked="#MouseClicked" prefHeight="90.0" prefWidth="115.0" text="Main" />
+            <Button id="3" layoutX="18.0" layoutY="360.0" mnemonicParsing="false" onMouseClicked="#MouseClicked" prefHeight="90.0" prefWidth="115.0" text="Characters" />
+            <Button id="4" layoutX="18.0" layoutY="485.0" mnemonicParsing="false" onMouseClicked="#MouseClicked" prefHeight="90.0" prefWidth="115.0" text="Calculator" />
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="18.0" layoutY="14.0" prefHeight="63.0" prefWidth="115.0" text="Spells" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
-      <ComboBox fx:id="schoolBox" layoutX="510.0" layoutY="49.0" prefWidth="150.0" promptText="Spell School" />
-      <ComboBox fx:id="levelBox" layoutX="686.0" layoutY="49.0" prefWidth="150.0" promptText="Spell Level" />
-      <TextField fx:id="searchName" layoutX="169.0" layoutY="49.0" prefHeight="25.0" prefWidth="235.0" promptText="Spell Name" />
+      <ComboBox fx:id="schoolBox" layoutX="414.0" layoutY="30.0" prefHeight="36.0" prefWidth="163.0" promptText="Spell School" />
+      <ComboBox fx:id="levelBox" layoutX="604.0" layoutY="30.0" prefHeight="36.0" prefWidth="163.0" promptText="Spell Level" />
+      <TextField fx:id="searchName" layoutX="184.0" layoutY="30.0" prefHeight="36.0" prefWidth="202.0" promptText="Spell Name">
+         <font>
+            <Font size="16.0" />
+         </font></TextField>
    </children>
 </AnchorPane>
